feat: auditoria e historico
